force-app/main/default/objects/Favorite__c/Favorite__c.object-meta.xml
<CustomObject>
    <description>Favorite products for a Client Advisor</description>
    <label>Favorite</label>
    <nameField>
        <displayFormat>FAV-{000000}</displayFormat>
        <label>Favorite Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Favorites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>