force-app/main/default/objects/Favorite__c/fields/FluidProductId__c.field-meta.xml
<CustomField>
    <fullName>FluidProductId__c</fullName>
    <formula>ProductCatalogue__r.FluidProductId__c</formula>
    <label>Fluid Product Id</label>
    <type>Text</type>
</CustomField>