force-app/main/default/objects/Favorite__c/fields/FluidRecipeId__c.field-meta.xml
<CustomField>
    <fullName>FluidRecipeId__c</fullName>
    <description>Fluid configurator Id</description>
    <externalId>true</externalId>
    <label>Recipe Id (Fluid)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>