force-app/main/default/objects/Favorite__c/fields/image1url__c.field-meta.xml
<CustomField>
    <fullName>image1url__c</fullName>
    <label>image1url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>