force-app/main/default/objects/Favorite__c/fields/image2url__c.field-meta.xml
<CustomField>
    <fullName>image2url__c</fullName>
    <label>image2url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>