force-app/main/default/objects/Favorite__c/fields/image4url__c.field-meta.xml
<CustomField>
    <fullName>image4url__c</fullName>
    <label>image4url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>