force-app/main/default/objects/Favorite__c/fields/ImageFrontUrl__c.field-meta.xml
<CustomField>
    <fullName>ImageFrontUrl__c</fullName>
    <formula>IF ( NOT(ISBLANK(FluidRecipeId__c)), 
IF ( 
AND ( 
NOT(ISBLANK(ProductCatalogue__r.Category__c)), 
NOT(ISBLANK(ProductCatalogue__r.Category__r.FluidViewImage__c)) 
), 
$Setup.ProductSettings__c.FluidPictureUrl__c + FluidRecipeId__c + &apos;/image/&apos; + ProductCatalogue__r.Category__r.FluidViewImage__c + &apos;.jpg&apos;, 
$Setup.ProductSettings__c.FluidPictureUrl__c + FluidRecipeId__c + &apos;/image/Front.jpg&apos; 
), 
&apos;&apos; 
)</formula>
    <label>Image Front Url</label>
    <type>Text</type>
</CustomField>