force-app/main/default/objects/Favorite__c/fields/LeadTimeTotalDays__c.field-meta.xml
<CustomField>
    <fullName>LeadTimeTotalDays__c</fullName>
    <formula>ProductCatalogue__r.LeadTimeTotalDays__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Time Total Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>