force-app/main/default/objects/Favorite__c/fields/LeadTimeTotalWeeks__c.field-meta.xml
<CustomField>
    <fullName>LeadTimeTotalWeeks__c</fullName>
    <formula>ProductCatalogue__r.LeadTimeTotalWeeks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Time Total Weeks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>