force-app/main/default/objects/Favorite__c/fields/ProductCatalogue__c.field-meta.xml
<CustomField>
    <fullName>ProductCatalogue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Catalogue</label>
    <referenceTo>ProductCatalogue__c</referenceTo>
    <relationshipLabel>Favorites</relationshipLabel>
    <relationshipName>Favorites</relationshipName>
    <type>Lookup</type>
</CustomField>