force-app/main/default/objects/Favorite__c/fields/ProductMacroColorName__c.field-meta.xml
<CustomField>
    <fullName>ProductMacroColorName__c</fullName>
    <formula>ProductCatalogue__r.MacroColorName__c</formula>
    <label>Product Macro Color Name</label>
    <type>Text</type>
</CustomField>