force-app/main/default/objects/Favorite__c/fields/ProductMarketingColorName__c.field-meta.xml
<CustomField>
    <fullName>ProductMarketingColorName__c</fullName>
    <formula>ProductCatalogue__r.MarketingColorName__c</formula>
    <label>Product Marketing Color Name</label>
    <type>Text</type>
</CustomField>