force-app/main/default/objects/Favorite__c/fields/ProductMaterialName__c.field-meta.xml
<CustomField>
    <fullName>ProductMaterialName__c</fullName>
    <formula>ProductCatalogue__r.MaterialName__c</formula>
    <label>Product Material Name</label>
    <type>Text</type>
</CustomField>