force-app/main/default/objects/Favorite__c/fields/TECH_FluidJson__c.field-meta.xml
<CustomField>
    <fullName>TECH_FluidJson__c</fullName>
    <description>Specific to Perso app</description>
    <label>TECH_FluidJson</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>