force-app/main/default/objects/Favorite__c/fields/Threekit_Short_Id__c.field-meta.xml
<CustomField>
    <fullName>Threekit_Short_Id__c</fullName>
    <label>Threekit Short Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>